--- a/book.toml
+++ b/book.toml
@@ -5,5 +5,6 @@ multilingual = false
 src = "src"
 title = "Jet™ documentation"
 
-[output.html.fold]
-enable = true
+[output.html]
+copy-fonts = false
+fold = { enable = true }
