--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["hydroperx"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Jet™"
+title = "Whack"
 
 [output.html]
 copy-fonts = false
